[package]
name = "inverted-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_qs = "0.12.0"
threadpool = "1.8.1"
